--- a/package.json
+++ b/package.json
@@ -4,12 +4,18 @@
   "description": "just learning nodejs",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/hedieh-heydari/NodeJs-course.git"
+    "url": "git+https://github.com/hedieh-heydari/NodeJs-course.git"
   },
   "author": "hedieh",
-  "license": "ISC"
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/hedieh-heydari/NodeJs-course/issues"
+  },
+  "homepage": "https://github.com/hedieh-heydari/NodeJs-course#readme",
+  "keywords": []
 }
